# Python-Editor

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PythonEditor.spec  README.md  _force_utf8_section.txt  build.ps1  junit.xml  main.py  pyproject.toml  requirements.txt
.docs/: README.md  architecture.md  entry-point.md
.docs/api/: README.zh.md  modules.Uui.call._command.zh.md  modules.Uui.call.exceptions.zh.md  modules.Uui.call.git.zh.md  modules.Uui.call.npm.zh.md  modules.Uui.call.pip.zh.md  modules.Uui.call.zh.md  modules.Uui.cli.zh.md  modules.Uui.demo.zh.md  modules.Uui.tool.designer.zh.md  modules.Uui.tool.zh.md  modules.Uui.web._smoke_http2.zh.md  modules.Uui.web.admin.options.zh.md  modules.Uui.web.admin.site.zh.md  modules.Uui.web.admin.urls.zh.md  modules.Uui.web.admin.views.zh.md  modules.Uui.web.admin.zh.md  modules.Uui.web.app.zh.md  modules.Uui.web.auth.decorators.zh.md  modules.Uui.web.auth.password.zh.md  modules.Uui.web.auth.session.zh.md  modules.Uui.web.auth.users.zh.md  modules.Uui.web.auth.zh.md  modules.Uui.web.cli.zh.md  modules.Uui.web.conf.default_settings.zh.md  modules.Uui.web.exceptions.zh.md  modules.Uui.web.middleware.zh.md  modules.Uui.web.orm.backend.base.zh.md  modules.Uui.web.orm.backend.mysql.zh.md  modules.Uui.web.orm.backend.oracle.zh.md  modules.Uui.web.orm.backend.postgresql.zh.md  modules.Uui.web.orm.backend.sqlite.zh.md  modules.Uui.web.orm.backend.zh.md  modules.Uui.web.orm.connection.zh.md  modules.Uui.web.orm.fields.zh.md  modules.Uui.web.orm.migration.zh.md  modules.Uui.web.orm.models.zh.md  modules.Uui.web.orm.query.zh.md  modules.Uui.web.orm.zh.zh.md  modules.Uui.web.request.zh.md  (+86 more)
.docs/core/: data.md  editor.md  env_manager.md  language.md  plugins.md  runner.md  settings.md
.docs/modules/: checker.md  data.md  env_manager.md  highlighter.md  i18n.md  logging.md  plugins.md  runner.md  settings.md  suggestion.md
.docs/ui/: call.md  cli.md  demo.md  tool.md  web.md  widgets.md
.docs/uui/: call.md  tool.md  web.md  widgets.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-tag-version.yml  issue-labeler.yml  pr-labeler.yml  pytest.yml  quality.yml  weekly-build.yml
core/: data.py
core/ai/: __init__.py  client.py  marketplace.py  plugin.py  provider.py  skills.py
core/editor/: __init__.py  app.py  buffer.py  document.py  document_io.py  find_dialog.py  helpers.py  lang_config.py  menu.py  runner_panel.py  tabs.py
core/env_manager/: __init__.py  manager.py
core/plugins/: __init__.py  api.py  hooks.py  manager.py  widgets.py
core/runner/: __init__.py  runner.py
core/settings/: __init__.py
data/keywords/: python.json
data/theme/: dark.json  light.json  solarized_dark.json
docs/: PLUGINS.md
modules/: data.py
modules/Uui/: .gitattribute  __init__.py  cli.py  demo.py
modules/checker/: API_DOCS.md  __init__.py  base.py  python.py
modules/env_manager/: __init__.py  manager.py
modules/highlighter/: API_DOCS.md  __init__.py  base.py  ccpp.py  dom_cache.py  json_expert.py  (+6 more)
tests/: conftest.py  test_highlight_delay.py
ui/: .gitignore  __init__.py  cli.py  demo.py
(+280 files in other folders)
