[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-editor"
version = "0.1.0"
description = "A Python Editor with Tkinter UI"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "utils*"]
